[package]
name = "remakes"
version = "0.1.0"
edition = "2021"

[dependencies]
nannou = "*"
once_cell = "*"

[features]
default = ["concord"]
squares = []
tangle = []
playground = []
concord = ["lazy_height"]

# There are features needed to make things continualy work
lazy_height = []
once = []        # Only render once, and then pause
